Replace Arrays.asList  ->  List.of